--- a/uk/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/uk/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,42 +1,37 @@
-# Status strings used in the subscribe dialog
+subscribe-validating-feed=Verifying the feed…
+subscribe-cancelSubscription=Ви впевнені, що хочете скасувати підписку на цей RSS-канал?
+subscribe-cancelSubscriptionTitle=Триває подписка на RSS-канал…
+subscribe-noFeedIsSelected=<no feed selected>
+subscribe-feedAlreadySubscribed=Ви вже підписані на цей RSS-канал.
+subscribe-errorOpeningFile=Не можливо відкрити файл
 
-subscribe-cancelSubscription = Ви впевнені, що хочете скасувати підписку на цей RSS-канал?
-subscribe-cancelSubscriptionTitle = Триває подписка на RSS-канал…
-subscribe-feedAlreadySubscribed = Ви вже підписані на цей RSS-канал.
-subscribe-errorOpeningFile = Не можливо відкрити файл
+subscribe-OPMLImportTitle=Виберіть OPML-файл для імпорту
+subscribe-OPMLExportTitle=Експорт RSS-каналів в OPML-файл
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle=%S OPML Export
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=My%SFeeds.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
+subscribe-errorInvalidOPMLFile=%S є некоректним OPML-файлом, або ж відбулася помилка під час його імпорту.
 
-subscribe-OPMLImportTitle = Виберіть OPML-файл для імпорту
-subscribe-OPMLExportTitle = Експорт RSS-каналів в OPML-файл
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
-subscribe-errorInvalidOPMLFile = %S є некоректним OPML-файлом, або ж відбулася помилка під час його імпорту.
+subscribe-OPMLExportOPMLFilesFilterText=OPML-файли
 
-subscribe-OPMLExportOPMLFilesFilterText = OPML-файли
-
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
-
-# when downloading new feed items from the subscribe dialog. 
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-
-newsblog-noNewArticlesForFeed = На цьому RSS-каналі не з’явилося оновлень.
-newsblog-networkError = %S не знайдений. Перевірте правильність написання імені та спробуйте знову.
-
-subscribe-confirmFeedDeletionTitle = Вилучити підписку на RSS-канал
-subscribe-confirmFeedDeletion = Ви впевнені, що хочете скасувати підписку на RSS-канал: \n  %S?
+subscribe-confirmFeedDeletionTitle=Вилучити підписку на RSS-канал
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
+subscribe-confirmFeedDeletion=Ви впевнені, що хочете скасувати підписку на RSS-канал: \n  %S?
 
 # FIXME: localize
+
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=Downloading feed articles (%S of %S)…
+
+newsblog-noNewArticlesForFeed=На цьому RSS-каналі не з’явилося оновлень.
+newsblog-networkErrorTitle=Network Error
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
+newsblog-networkError=%S не знайдений. Перевірте правильність написання імені та спробуйте знову.
 newsblog-feedNotValidTitle=Invalid Feed
 ## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
 newsblog-feedNotValid=%S is not a valid feed.
-newsblog-feedNotValidTitle=Invalid Feed
 newsblog-getNewMsgsCheck=Checking feeds for new items…
-newsblog-networkErrorTitle=Network Error
-## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
-subscribe-OPMLExportDefaultFileName=My%SFeeds.opml
-## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
-subscribe-OPMLExportFileDialogTitle=%S OPML Export
-## LOCALIZATION NOTE(subscribe-gettingFeedItems):
-subscribe-gettingFeedItems=Downloading feed articles (%S of %S)…
-subscribe-noFeedIsSelected=<no feed selected>
-subscribe-validating-feed=Verifying the feed…
