--- a/uk/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/uk/mail/chrome/messenger/addressbook/addressBook.properties
@@ -40,145 +40,147 @@
 #
 # The following are used by the Mailing list dialog
 #
-emptyListName = Введіть назву списку.
-lastFirstFormat = %S %S
-firstLastFormat = %S %S  
+emptyListName=Введіть назву списку.
+lastFirstFormat=%S %S
+firstLastFormat=%S %S  
 
-# %S will be the card's display name
-# %S will be the card's display name
+newContactTitle=Нова картка
+# %S will be the contact's display name
+newContactTitleWithDisplayName=Нова картка для %S 
+editContactTitle=Редагування картки
+# %S will be the contact's display name
+editContactTitleWithDisplayName=Редагування картки для %S
 # don't translate vCard
-editVCardTitle = Редагувати візитну картку
+editVCardTitle=Редагувати візитну картку
 # %S will be the card's display name, don't translate vCard
-editVCardTitleWithDisplayName = Редагувати візитну картку %S
+editVCardTitleWithDisplayName=Редагувати візитну картку %S
 
 ## LOCALIZATION NOTE (cardRequiredDataMissingMessage):  do not localize \n
-cardRequiredDataMissingMessage = Ви повинні заповнити щонайменше одне з наступних полей:\nЕлектронна пошта, Ім’я, Прізвище, Відображати як, Організація.
-cardRequiredDataMissingTitle = Відсутня необхідна інформація
-incorrectEmailAddressFormatMessage = Адреса електронної пошти повинна бути у форматі user@host.
-incorrectEmailAddressFormatTitle = Невірний формат адреси електронної пошти
+cardRequiredDataMissingMessage=Ви повинні заповнити щонайменше одне з наступних полей:\nЕлектронна пошта, Ім’я, Прізвище, Відображати як, Організація.
+cardRequiredDataMissingTitle=Відсутня необхідна інформація
+incorrectEmailAddressFormatMessage=Адреса електронної пошти повинна бути у форматі user@host.
+incorrectEmailAddressFormatTitle=Невірний формат адреси електронної пошти
 
-viewListTitle = Список розсилки: %S
-mailListNameExistsTitle = Список розсилки вже існує
-mailListNameExistsMessage = Список розсилки з такою назвою вже існує. Виберіть іншу назву.
+viewListTitle=Список розсилки: %S
+mailListNameExistsTitle=Список розсилки вже існує
+mailListNameExistsMessage=Список розсилки з такою назвою вже існує. Виберіть іншу назву.
 
 # used in the addressbook
-confirmDeleteMailingListTitle = Вилучення списку розсилання
-confirmDeleteAddressbookTitle = Вилучення адресної книги
-confirmDeleteAddressbook = Ви дійсно хочете вилучити вибрану адресну книгу?
-confirmDeleteCollectionAddressbook = Якщо ця адресна книга буде вилучена, %S більше не зможе збирати адреси з поштових повідомлень. Ви впевнені, що хочете вилучити вибрану адресну книгу?
-confirmDeleteMailingList = Ви дійсно хочете вилучити вибраний список розсилання?
-confirmDeleteMailingLists = Ви дійсно бажаєте вилучити вибрані списки розсилання?
+confirmDeleteMailingListTitle=Вилучення списку розсилання
+confirmDeleteAddressbookTitle=Вилучення адресної книги
+confirmDeleteAddressbook=Ви дійсно хочете вилучити вибрану адресну книгу?
+confirmDeleteCollectionAddressbook=Якщо ця адресна книга буде вилучена, %S більше не зможе збирати адреси з поштових повідомлень. Ви впевнені, що хочете вилучити вибрану адресну книгу?
+confirmDeleteMailingList=Ви дійсно хочете вилучити вибраний список розсилання?
+confirmDeleteListsAndContacts=Ви дійсно хочете вилучити вибрані картки та списки розсилання?
+confirmDeleteMailingLists=Ви дійсно бажаєте вилучити вибрані списки розсилання?
 
-propertyPrimaryEmail = Електронна пошта
-propertyListName = Назва списку
-propertySecondaryEmail = Дод. адреса електронної пошти
-propertyScreenName = Інтернет-пейджер
-propertyNickname = Псевдонім
-propertyDisplayName = Ім’я, що відображається
-propertyWork = Робочий
-propertyHome = Домашній
-propertyFax = Факс
-propertyCellular = Мобільний
-propertyPager = Пейджер
-propertyCustom1 = Інше 1
-propertyCustom2 = Інше 2
-propertyCustom3 = Інше 3
-propertyCustom4 = Інше 4
+propertyPrimaryEmail=Електронна пошта
+propertyListName=Назва списку
+propertySecondaryEmail=Дод. адреса електронної пошти
+propertyScreenName=Інтернет-пейджер
+propertyNickname=Псевдонім
+propertyDisplayName=Ім’я, що відображається
+propertyWork=Робочий
+propertyHome=Домашній
+propertyFax=Факс
+propertyCellular=Мобільний
+propertyPager=Пейджер
+propertyBirthday=День народження
+propertyCustom1=Інше 1
+propertyCustom2=Інше 2
+propertyCustom3=Інше 3
+propertyCustom4=Інше 4
+
+## LOCALIZATION NOTE (dateformat)
+## Only used if the year isn't present and should be in the format used by Date.toLocaleFormat
+## see http://developer.mozilla.org/en/Core_JavaScript_1.5_Reference/Global_Objects/Date/toLocaleFormat
+## %B is the month's localized name and %e is the day of the month [1-31]
+## Separators (a space, dash, etc.) can be used
+dateformat=%B %e
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
-cityAndStateAndZip = %1$S, %2$S, %3$S
+cityAndStateAndZip=%1$S, %2$S, %3$S
 ## LOCALIZATION NOTE (cityAndStateNoZip): 
 ## %1$S is city, %2$S is state
-cityAndStateNoZip = %1$S, %2$S
+cityAndStateNoZip=%1$S, %2$S
 ## LOCALIZATION NOTE (cityOrStateAndZip): 
 ## %1$S is city or state, %2$S is zip
-cityOrStateAndZip = %1$S, %2$S
+cityOrStateAndZip=%1$S, %2$S
 
 stateZipSeparator=
 
-prefixTo = Кому
-prefixCc = Копія
-prefixBcc = Прихована копія
-addressBook = Адресна книга
+prefixTo=Кому
+prefixCc=Копія
+prefixBcc=Прихована копія
+addressBook=Адресна книга
 
 # mailnews.js
-ldap_2.servers.pab.description = Особиста адресна книга
-ldap_2.servers.history.description = Зібрані адреси
+ldap_2.servers.pab.description=Особиста адресна книга
+ldap_2.servers.history.description=Зібрані адреси
+## LOCALIZATION NOTE (ldap_2.servers.osx.description is only used on Mac OS X)
+ldap_2.servers.osx.description=Адресна книга Mac OS X
 
 # status bar stuff
-## %1$S is address book name, %2$S is card count
+## LOCALIZATION NOTE (totalContactStatus):
+## %1$S is address book name, %2$S is contact count
+totalContactStatus=Всього карток у %1$S: %2$S
 ## LOCALIZATION NOTE (matchesFound):  do not localize %S
-noMatchFound = Збігів не знайдено
-matchFound = Знайдений один збіг
-matchesFound = Знайдено збігів: %S
+noMatchFound=Збігів не знайдено
+matchFound=Знайдений один збіг
+matchesFound=Знайдено збігів: %S
 
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=%1$S контакт скопійовано;%1$S контакта скопійовано;%1$S контактів скопійовано
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=%1$S контакт переміщено;%1$S контакти переміщено;%1$S контактів переміщено
 
 # LDAP directory stuff
-invalidName = Введіть коректне ім’я.
-invalidHostname = Введіть коректне мережеве ім’я сервера.
-invalidPortNumber = Введіть корретний номер порту.
-invalidResults = Введіть коректне число результатів.
-abReplicationOfflineWarning = Для виконання реплікації з використанням LDAP ви повинні підключитися до мережі.
-abReplicationSaveSettings = Перед завантаженням каталога налаштування повинні бути збережені.
+invalidName=Введіть коректне ім’я.
+invalidHostname=Введіть коректне мережеве ім’я сервера.
+invalidPortNumber=Введіть корретний номер порту.
+invalidResults=Введіть коректне число результатів.
+abReplicationOfflineWarning=Для виконання реплікації з використанням LDAP ви повинні підключитися до мережі.
+abReplicationSaveSettings=Перед завантаженням каталога налаштування повинні бути збережені.
 
 # For importing / exporting
-ExportAddressBookTitle = Експорт адресної книги
-LDIFFiles = LDIF
-CSVFiles = З комою як роздільник
-TABFiles = З Tab'ом як роздільник
-failedToExportTitle = Помилка експорту
-failedToExportMessageNoDeviceSpace = Помилка експорту адресної книги, немає місця на диску.
-failedToExportMessageFileAccessDenied = Помилка експорту адресної книги, доступ до файлу заборонений.
+ExportAddressBookTitle=Експорт адресної книги
+LDIFFiles=LDIF
+CSVFiles=З комою як роздільник
+TABFiles=З Tab'ом як роздільник
+failedToExportTitle=Помилка експорту
+failedToExportMessageNoDeviceSpace=Помилка експорту адресної книги, немає місця на диску.
+failedToExportMessageFileAccessDenied=Помилка експорту адресної книги, доступ до файлу заборонений.
 
 # For getting authDN for replication using dlg box
-AuthDlgTitle = Реплікація адресних книг LDAP
-AuthDlgDesc = Введіть ім’я користувача і пароль для доступу до каталога сервера.
+AuthDlgTitle=Реплікація адресних книг LDAP
+AuthDlgDesc=Введіть ім’я користувача і пароль для доступу до каталога сервера.
 
 # LOCALIZATION NOTE(joinMeInThisChat)
 # use + for spaces
-joinMeInThisChat = Приєднатися+до+чату.
+joinMeInThisChat=Приєднатися+до+чату.
 
 # For printing
-headingHome = Домашня адреса
-headingWork = Робочий
-headingOther = Інше
-headingPhone = Телефон
-headingDescription = Опис
-headingAddresses = Адреси
+headingHome=Домашня адреса
+headingWork=Робочий
+headingOther=Інше
+headingPhone=Телефон
+headingDescription=Опис
+headingAddresses=Адреси
 
 # For address books
-newAddressBookTitle = Створити адресну книгу
-renameAddressBookTitle = Властивості адресної книги
+newAddressBookTitle=Створити адресну книгу
+renameAddressBookTitle=Властивості адресної книги
 
 # For corrupt .mab files
-corruptMabFileTitle = Пошкоджений файл адресної книги
-corruptMabFileAlert = Одна з адресних книг  (файл %1$S) не може бути прочитана. У тому ж каталозі будуть створені новий файл %2$S і резервна копія старого з назвою %3$S.
+corruptMabFileTitle=Пошкоджений файл адресної книги
+corruptMabFileAlert=Одна з адресних книг  (файл %1$S) не може бути прочитана. У тому ж каталозі будуть створені новий файл %2$S і резервна копія старого з назвою %3$S.
 
 # For locked .mab files
-lockedMabFileTitle = Неможливо завантажити файл адресної книги
-lockedMabFileAlert = Неможливо завантажити файл адресної книги %S. Можливо він доступний тільки для читання або заблокований іншою програмою. Почекайте якийсь час і спробуйте знову.
-
-# FIXME: localize
-## LOCALIZATION NOTE (dateformat)
-dateformat=%B %e
-## LOCALIZATION NOTE (ldap_2.servers.osx.description is only used on Mac OS X)
-ldap_2.servers.osx.description=Адресна книга Mac OS X
-propertyBirthday=День народження
-
-# FIXME: localize
-confirmDeleteListsAndContacts=Ви дійсно хочете вилучити вибрані картки та списки розсилання?
-editContactTitle=Редагування картки
-editContactTitleWithDisplayName=Редагування картки для %S 
-editContactTitleWithDisplayName=Редагування картки для %S
-newContactTitle=Нова картка
-newContactTitleWithDisplayName=Нова картка для %S
-newContactTitleWithDisplayName=Нова картка для %S 
-## LOCALIZATION NOTE (totalContactStatus):
-totalContactStatus=Всього карток у %1$S: %2$S
-
-# FIXME: localize
-## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
-contactsCopied=%1$S contact copied;%1$S contacts copied
-## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
-contactsMoved=%1$S contact moved;%1$S contacts moved
+lockedMabFileTitle=Неможливо завантажити файл адресної книги
+lockedMabFileAlert=Неможливо завантажити файл адресної книги %S. Можливо він доступний тільки для читання або заблокований іншою програмою. Почекайте якийсь час і спробуйте знову.
