--- a/uk/mail/installer/mui.properties
+++ b/uk/mail/installer/mui.properties
@@ -35,7 +35,7 @@
 # ***** END LICENSE BLOCK *****
 
 # To make the l10n tinderboxen see changes to this file you can change a value
-# name by adding — to the end of the name followed by chars (e.g. Branding-2).
+# name by adding - to the end of the name followed by chars (e.g. Branding-2).
 
 # LOCALIZATION NOTE:
 
@@ -49,7 +49,6 @@
 # $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
 # for double ampersand) and prevents the letter following the ampersand from
 # being used as an accesskey.
-
 
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
